--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.strila.petproject.activity.activity1.MainActivity">
+    tools:context="com.strila.petproject.ui.flow1.MainActivity">
 
 </FrameLayout>
