--- a/app/src/main/res/layout/fragment_fragment2.xml
+++ b/app/src/main/res/layout/fragment_fragment2.xml
@@ -2,13 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.strila.petproject.fragment.fragment1.Fragment1">
+    tools:context="com.strila.petproject.ui.flow1.screen2.Fragment2">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="@string/hello_blank_fragment2"
+        android:text="@string/fragment2.hello.blank2"
         android:textSize="24sp" />
 
 </FrameLayout>
