--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="user"
-            type="com.strila.petproject.data.User" />
+            type="com.strila.petproject.data.models.User" />
     </data>
 
     <FrameLayout
